src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>C4G_Campaign_Location_Address_1__c</fullName>
        <inlineHelpText>What is the address of the location represented by this Campaign record? Useful for mailing addresses and event sites.</inlineHelpText>
        <label>Campaign Location Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Campaign_Location_Address_2__c</fullName>
        <label>Campaign Location Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Campaign_Location_City__c</fullName>
        <label>Campaign Location City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Campaign_Location_Country__c</fullName>
        <label>Campaign Location Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Campaign_Location_Postal_Code__c</fullName>
        <label>Campaign Location Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Campaign_Location_State_Province__c</fullName>
        <label>Campaign Location State/Province</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Campaign_Location__c</fullName>
        <inlineHelpText>Where or what is the physical location of an event represented by a Campaign? E.g. &quot;Bob&apos;s Hotel, &quot; &quot;Metropolitan Conference Center,&quot; or &quot;Volunteer Center.&quot;</inlineHelpText>
        <label>Campaign Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4G_Cost_Per_Dollar_Raised__c</fullName>
        <formula>IF( HierarchyAmountAllOpportunities =0, 0, HierarchyActualCost / HierarchyAmountAllOpportunities )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Dollar Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C4G_Cost_Per_Piece__c</fullName>
        <formula>IF( HierarchyNumberOfContacts = 0 , 0, HierarchyActualCost / HierarchyNumberOfContacts )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Piece</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C4G_Cost_Per_Response__c</fullName>
        <formula>IF( HierarchyNumberOfOpportunities = 0, 0, HierarchyActualCost / HierarchyNumberOfOpportunities )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C4G_Response_Rate__c</fullName>
        <formula>IF( HierarchyNumberOfContacts = 0, 0, HierarchyNumberOfOpportunities /HierarchyNumberOfContacts )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C4G_Unconverted_Leads__c</fullName>
        <formula>NumberOfLeads - NumberOfConvertedLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Leads that have not been converted into contacts.</inlineHelpText>
        <label>Open Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Account_Number__c</fullName>
        <label>C&amp;P Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Campaign_Link__c</fullName>
        <label>C&amp;P Connect Campaign Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Campaign__c</fullName>
        <label>C&amp;P Connect Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Connect_Default_Selected_Item__c</fullName>
        <inlineHelpText>Default Selected Item testing feroz</inlineHelpText>
        <label>C&amp;P Connect Default Selected Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Last_Update__c</fullName>
        <label>C&amp;P Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Basis__c</fullName>
        <label>C&amp;P Lift Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Campaign__c</fullName>
        <label>C&amp;P Lift Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Landing_Page__c</fullName>
        <label>C&amp;P Lift Landing Page</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Life_Span__c</fullName>
        <label>C&amp;P Lift Life Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Lift_Rate__c</fullName>
        <label>C&amp;P Lift Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Patron_Rank_Max__c</fullName>
        <label>C&amp;P Patron Rank Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Patron_Rank_Min__c</fullName>
        <label>C&amp;P Patron Rank Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum_Start_Amount__c</fullName>
        <label>C&amp;P Payment Maximum Start Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Maximum__c</fullName>
        <label>C&amp;P Payment Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__CnP_Payment_Minimum__c</fullName>
        <label>C&amp;P Payment Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator</label>
        <referenceTo>Facilitator__c</referenceTo>
        <relationshipLabel>Classes and Meetings</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Classes and Meetings</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of hours that are completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Completed Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Completed_Hours__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Jobs__c</fullName>
        <label>Volunteer Jobs</label>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Shifts__c</fullName>
        <label>Volunteer Shifts</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Shifts__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.  You only need to set this if you want to override the Time Zone set on the Site Guest User profile.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific/Kiritimati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Chatham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Auckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Enderbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Tongatapu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kamchatka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Lord_Howe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific/Guadalcanal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Darwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Seoul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Hong_Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Kuala_Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Taipei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Saigon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Rangoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Dacca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Yekaterinburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Katmandu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteers_Still_Needed__c</fullName>
        <label>Volunteers Still Needed</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Volunteer_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>GW_Volunteers__Number_of_Volunteers__c</columns>
        <columns>GW_Volunteers__Volunteer_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Volunteer_Jobs__c</columns>
        <columns>GW_Volunteers__Volunteers_Still_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.GW_Volunteers__Volunteers_Campaign</value>
        </filters>
        <label>Volunteer Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Class_Coaching_Session</fullName>
        <active>true</active>
        <label>Class Coaching Session</label>
    </recordTypes>
    <recordTypes>
        <fullName>Class_Event_or_Training</fullName>
        <active>true</active>
        <label>Class Event or Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Class_Group_Class</fullName>
        <active>true</active>
        <label>Class Group Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>One off events in which PC participates</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fundraising</fullName>
        <active>true</active>
        <description>Use this for all Fundraising campaigns</description>
        <label>Fundraising</label>
    </recordTypes>
    <recordTypes>
        <fullName>GW_Volunteers__Volunteers_Campaign</fullName>
        <active>true</active>
        <description>A campaign specifically used to track Volunteers</description>
        <label>Volunteer Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Class</fullName>
        <active>true</active>
        <label>Meeting Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Event_or_Training</fullName>
        <active>true</active>
        <label>Meeting Event or Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_One_on_One</fullName>
        <active>true</active>
        <label>Meeting One on One</label>
    </recordTypes>
    <recordTypes>
        <fullName>People_List</fullName>
        <active>true</active>
        <description>For use with people/mailing lists</description>
        <label>People List</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>